attempting to fix or reduce the flickering of the like button when openning description

--- a/client/src/app/components/album-item/album-description.sass
+++ b/client/src/app/components/album-item/album-description.sass
@@ -33,12 +33,13 @@
   border-radius: 0px
   background-color: appvariables.$main-background-color
   border-color: appvariables.$dark-background-color
+  min-height: 90px
 
 .description-like-button
   padding: 0% 1%
   right: 1%
-  min-height: 20px
-  min-width: 30px
+  min-height: 40px
+  min-width: 50px
 
 
 .modal-header button
