--- a/client/src/app/components/album-item/album-item.component.sass
+++ b/client/src/app/components/album-item/album-item.component.sass
@@ -45,8 +45,8 @@
   padding: 2.5%
   opacity: 0
   transition: .3s ease
-  min-width: 10px
-  min-height: 10px
+  min-width: 30px
+  min-height: 30px
 
 
 .image-container
